добавил в компонент title возможность descrText

--- a/src/components/title/title.pug
+++ b/src/components/title/title.pug
@@ -1,2 +1,7 @@
 mixin title(options)
-  p.title= options.title
+  if (options.descrText)
+    .title-wrap
+      p.title= options.title
+      p.title__descr= options.descrText
+  else
+    p.title= options.title
