добавил в разметку title для Dropdown

--- a/src/page/form-elements.pug
+++ b/src/page/form-elements.pug
@@ -88,4 +88,4 @@ block content
               +pagination({ title: 'Pagination' })
         .ui-kit__box
           .ui-kit__column
-            +title({ title: "Dropdown" })
+            +title({ title: "Dropdown", descrText: "Default" })
