--- a/src/style/ui-kit.scss
+++ b/src/style/ui-kit.scss
@@ -37,6 +37,14 @@
     width: 263px;
     margin-left: 127px;
   }
+
+  .input-group {
+    margin-bottom: 20px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
 }
 
 .ui-kit__column-row {
