--- a/src/page/form-elements.pug
+++ b/src/page/form-elements.pug
@@ -88,5 +88,5 @@ block content
               +pagination({ title: 'Pagination' })
         .ui-kit__box
           .ui-kit__column
-            +input({ id: 'number-guests-input1', isFakeInput: true, labelName: 'Dropdown', isButtonSplit: true, isDownSplitAnimation: true, isHaveIcon: true, placeholder: '2 спальни, 2 кровати...', isBigLabel: true, descrText: 'Default' })
-            +input({ id: 'number-guests-input2', isFakeInput: true, labelName: 'Dropdown', isButtonSplit: true, isDownSplitAnimation: true, isHaveIcon: true, placeholder: '2 спальни, 2 кровати...', isBigLabel: true, descrText: 'Default' })
+            +input({ id: "number-guests-input1", isFakeInput: true, labelName: "Dropdown", isButtonSplit: true, isDownSplitAnimation: true, isHaveIcon: true, placeholder: "2 спальни, 2 кровати...", isBigLabel: true, descrText: "Default" })
+            +input({ id: "number-guests-input2", isFakeInput: true, labelName: "Dropdown", isButtonSplit: true, isDownSplitAnimation: true, isHaveIcon: true, placeholder: "2 спальни, 2 кровати...", isBigLabel: true, descrText: "Default" })
