Изменил descrText у expanded input дропдауна

--- a/src/page/form-elements.pug
+++ b/src/page/form-elements.pug
@@ -89,4 +89,4 @@ block content
         .ui-kit__box
           .ui-kit__column
             +input({ id: "number-guests-input1", isFakeInput: true, labelName: "Dropdown", isButtonSplit: true, isDownSplitAnimation: true, isHaveIcon: true, placeholder: "2 спальни, 2 кровати...", isBigLabel: true, descrText: "Default" })
-            +input({ id: "number-guests-input2", isFakeInput: true, labelName: "Dropdown", isButtonSplit: true, isDownSplitAnimation: true, isHaveIcon: true, placeholder: "2 спальни, 2 кровати...", isBigLabel: true, descrText: "Default" })
+            +input({ id: "number-guests-input2", isFakeInput: true, labelName: "Dropdown", isButtonSplit: true, isDownSplitAnimation: true, isHaveIcon: true, placeholder: "2 спальни, 2 кровати...", isBigLabel: true, descrText: "Expanded" })
