добавил id для контейнера дропдауна

--- a/src/page/form-elements.pug
+++ b/src/page/form-elements.pug
@@ -87,6 +87,6 @@ block content
             .ui-kit__column-row
               +pagination({ title: 'Pagination' })
         .ui-kit__box
-          .ui-kit__column
+          div(id="drop-down-container" class="ui-kit__column")
             +input({ id: "number-guests-input1", isFakeInput: true, labelName: "Dropdown", isButtonSplit: true, isDownSplitAnimation: true, isHaveIcon: true, placeholder: "2 спальни, 2 кровати...", isBigLabel: true, descrText: "Default" })
             +input({ id: "number-guests-input2", isFakeInput: true, labelName: "Dropdown", isButtonSplit: true, isDownSplitAnimation: true, isHaveIcon: true, placeholder: "2 спальни, 2 кровати...", isBigLabel: true, descrText: "Expanded" })
