--- a/src/style/utils/variables.scss
+++ b/src/style/utils/variables.scss
@@ -1,5 +1,5 @@
 // font
-$fontFamily: 'Quicksand', 'Montserrat', sans-serif;
+$fontFamily: "Quicksand", "Montserrat", sans-serif;
 
 // Size
 $desktopWidth: 1160px;
