--- a/src/components/main-menu/main-menu.scss
+++ b/src/components/main-menu/main-menu.scss
@@ -105,7 +105,7 @@
       width: 100%;
       height: 20px;
       background: transparent;
-      content: '';
+      content: "";
     }
 
     > a {
@@ -125,7 +125,7 @@
 
         transform: rotate(45deg);
         opacity: 0.5;
-        content: '';
+        content: "";
       }
 
       &:hover {
