--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -2,7 +2,6 @@
 @import "utils/variables";
 @import "_fonts";
 
-
 body {
   color: $contentColor;
   font-size: 14px;
@@ -21,7 +20,7 @@ body {
 .index-block {
   box-sizing: border-box;
   height: 830px;
-  background-image: url('./interior.jpg');
+  background-image: url("./interior.jpg");
   background-repeat: no-repeat;
   background-position: center -69px;
 }
@@ -76,13 +75,12 @@ body {
 @import "../components/logo/logo";
 @import "../components/main-menu/main-menu";
 @import "../components/button/button";
-@import '../components/text-content/text-content';
-@import '../components/nav-menu/nav-menu';
-@import '../components/input/input';
-@import '../components/copyright/copyright';
-@import '../components/social-buttons/social-buttons';
-@import '../components/date-wishes/date-wishes';
-@import '../components/date-picker/date-picker';
-@import '../components/drop-down/drop-down';
-@import '../components/footer/footer';
-
+@import "../components/text-content/text-content";
+@import "../components/nav-menu/nav-menu";
+@import "../components/input/input";
+@import "../components/copyright/copyright";
+@import "../components/social-buttons/social-buttons";
+@import "../components/date-wishes/date-wishes";
+@import "../components/date-picker/date-picker";
+@import "../components/drop-down/drop-down";
+@import "../components/footer/footer";
