исправил названия некоторых иконок на корректные

--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -45,7 +45,7 @@ mixin footer()
               })
             div(class='page-footer__col  page-footer__col--large')
               +textContent({ title: 'Подписка', text: 'Получайте специальные предложения и новости сервиса' })
-              +input({ isButtonSplit: true, iconSrc: 'arrow_forward.svg', type: 'email', placeholder: 'Email', isRightSplitAnimation: true })
+              +input({ isButtonSplit: true, iconSrc: 'arrow-forward.svg', type: 'email', placeholder: 'Email', isRightSplitAnimation: true })
         .page-footer__side-info
           +copyright({ year: 2018 })
           +socialButtons()
