--- a/src/page/form-elements.pug
+++ b/src/page/form-elements.pug
@@ -21,12 +21,12 @@ block content
             +input({ id: 'number-guests-input', isFakeInput: true, labelName: 'Dropdown', isButtonSplit: true, isDownSplitAnimation: true, isHaveIcon: true, placeholder: 'Сколько гостей', isBigLabel: true, descrText: 'Default' })
             +input({ id:'maskedTextField', type: 'text', placeholder: 'ДД.ММ.ГГГГ', labelName: 'Masked text field', isBigLabel: true, descrText: 'Default' })
             .ui-kit__inputs-column
-              +input({ id: 'arrival-input', splitId: 'arrival-split-btn', labelName: 'Date Dropdown', isButtonSplit: true, isDownSplitAnimation: true, iconSrc: 'expand_more.svg', placeholder: 'ДД.ММ.ГГГГ', isDarkPlaceholder: true, isBigLabel: true })
-              +input({ id: 'departure-input', splitId: 'departure-split-btn', labelName: 'Date Dropdown', isButtonSplit: true, isDownSplitAnimation: true, iconSrc: 'expand_more.svg', placeholder: '19.08.2019', isDarkPlaceholder: true, isBigLabel: true })
+              +input({ id: 'arrival-input', splitId: 'arrival-split-btn', labelName: 'Date Dropdown', isButtonSplit: true, isDownSplitAnimation: true, iconSrc: 'expand-more.svg', placeholder: 'ДД.ММ.ГГГГ', isDarkPlaceholder: true, isBigLabel: true })
+              +input({ id: 'departure-input', splitId: 'departure-split-btn', labelName: 'Date Dropdown', isButtonSplit: true, isDownSplitAnimation: true, iconSrc: 'expand-more.svg', placeholder: '19.08.2019', isDarkPlaceholder: true, isBigLabel: true })
             div(class="ui-kit__inputs-column  ui-kit__inputs-column--small")
               +input({ id: 'filterDateDropdown', isFakeInput: true, labelName: 'Filter date dropdown', isButtonSplit: true, isDownSplitAnimation: true, isHaveIcon: true, placeholder: '19 авг - 23 авг', isBigLabel: true })
             div(class="ui-kit__inputs-column  ui-kit__inputs-column--small")
-              +input({ isButtonSplit: true, labelName: 'Subscription text field',  isBigLabel: true, iconSrc: 'arrow_forward.svg', type: 'email', placeholder: 'Email', isRightSplitAnimation: true })
+              +input({ isButtonSplit: true, labelName: 'Subscription text field',  isBigLabel: true, iconSrc: 'arrow-forward.svg', type: 'email', placeholder: 'Email', isRightSplitAnimation: true })
           .ui-kit__column
             .ui-kit__column-row
               +checkbox({
