позиционирование в ui-kit для дропдауна

--- a/src/style/ui-kit.scss
+++ b/src/style/ui-kit.scss
@@ -129,6 +129,12 @@
   }
 }
 
+#drop-down-container {
+  .drop-down {
+    top: 345px;
+  }
+}
+
 @import "../components/checkbox/checkbox";
 @import "../components/radiobtn/radiobtn";
 @import "../components/toggle/toggle";
