добавил стиль mt-large

--- a/src/style/ui-kit.scss
+++ b/src/style/ui-kit.scss
@@ -55,6 +55,11 @@
     margin-bottom: 55px;
   }
 
+  &--mt-large {
+    margin-top: 171px;
+    margin-bottom: 46px;
+  }
+
   &--small {
     margin-bottom: 30px;
   }
