добавил 2 дропдаун в form-elements

--- a/src/page/form-elements.pug
+++ b/src/page/form-elements.pug
@@ -112,6 +112,8 @@ block content
                   { id: "shampu2", title: "Шампунь" },
                 ]
               })
+          div(id="drop-down-container2" class="ui-kit__column  ui-kit__column--mls  ui-kit__column--wl")
+            +input({ id: "number-guests-input3", isFakeInput: true, labelName: "Dropdown", isButtonSplit: true, isDownSplitAnimation: true, isHaveIcon: true, placeholder: "Сколько гостей", isBigLabel: true })
         div(class="ui-kit__box")
           .ui-kit__column
             +features({
