подправил размеры дроп дауна под PP

--- a/src/components/drop-down/drop-down.scss
+++ b/src/components/drop-down/drop-down.scss
@@ -24,7 +24,10 @@
 }
 
 .drop-down__wrap {
-  padding: 7px 10px;
+  padding-top: 7px;
+  padding-left: 14px;
+  padding-right: 7px;
+  padding-bottom: 8px;
 }
 
 .drop-down__count-list {
