--- a/src/components/checkbox/checkbox.scss
+++ b/src/components/checkbox/checkbox.scss
@@ -55,6 +55,10 @@
   }
 }
 
+.checkbox--rich .checkbox__item {
+  width: 264px;
+}
+
 .checkbox__item input[type="checkbox"] {
   display: none;
 }
@@ -107,4 +111,20 @@
 
 .checkbox__item input[type="checkbox"]:checked + label::before {
   border-color: $accentColor;
+}
+
+.checkbox__descr {
+  margin: 0;
+  margin-top: 5px;
+  margin-left: 30px;
+  color: transparentize($contentColor, 0.5);
+  font-size: 12px;
+  line-height: 14px;
+}
+
+.checkbox__item .checbox__lbl--rich {
+  font-size: 14px;
+  font-weight: bold;
+  line-height: 18px;
+  color: transparentize($contentColor, 0.25);
 }
