добавил правило bunny-hop

--- a/src/style/ui-kit.scss
+++ b/src/style/ui-kit.scss
@@ -67,6 +67,10 @@
     margin-bottom: 55px;
   }
 
+  &--bunny-hop {
+    margin-top: 255px;
+  }
+
   &--mt-large {
     margin-top: 171px;
     margin-bottom: 46px;
