--- a/src/style/ui-kit.scss
+++ b/src/style/ui-kit.scss
@@ -160,7 +160,8 @@
   }
 }
 
-.ui-kit__box #drop-down-container2 {
+.ui-kit__box #drop-down-container2,
+.ui-kit__box #drop-down-container3 {
   .drop-down {
     top: 261px;
   }
