--- a/src/page/form-elements.pug
+++ b/src/page/form-elements.pug
@@ -70,7 +70,7 @@ block content
                   { idGroup: "rating2", currentRating: 5 }
                 ]
               })
-          .ui-kit__column
+          div(class="ui-kit__column  ui-kit__column--xls")
             div(class="ui-kit__column-row  ui-kit__column-row--large")
               +rangeSlider({ title: "Range Slider", min: '5 000', max: '10 000' })
             div(class="ui-kit__column-row  ui-kit__column-row--small")
@@ -123,6 +123,8 @@ block content
                   { id: "help", title: "Помощник для инвалидов", descr: "На 1 этаже вас встретит специалист  и проводит до номера." },
                 ]
               })
+          div(id="drop-down-container3" class="ui-kit__column  ui-kit__column--wl  ui-kit__column--lms")
+            +input({ id: "number-guests-input4", isFakeInput: true, labelName: "Dropdown", isButtonSplit: true, isDownSplitAnimation: true, isHaveIcon: true, placeholder: "Сколько гостей", isBigLabel: true })
         div(class="ui-kit__box")
           .ui-kit__column
             +features({
