--- a/src/style/ui-kit.scss
+++ b/src/style/ui-kit.scss
@@ -176,3 +176,4 @@
 @import "../components/title/title";
 @import "../components/pagination/pagination";
 @import "../components/features/features";
+@import "../components/bullet-list/bullet-list";
