задал размеры bullet__item в form-elements

--- a/src/style/ui-kit.scss
+++ b/src/style/ui-kit.scss
@@ -93,6 +93,10 @@
   .button--empty-style {
     padding: 13px 21px;
   }
+
+  .bullet__item {
+    width: 237px;
+  }
 }
 
 .ui-kit__inputs-column {
