--- a/src/page/index.pug
+++ b/src/page/index.pug
@@ -1,4 +1,5 @@
 extends ../layout/main.pug
+include ../components/date-wishes/date-wishes
 
 block variables
   - var title = "Toxin - подбери свой отель!"
@@ -10,6 +11,6 @@ block content
     .index-block
       .container
         .index-block__wrap
-          include ../components/date-wishes/date-wishes
+          +dateWishes()
         .index-block__slogan
           p Лучшие номера для вашей работы, отдыха и просто вдохновения
