--- a/src/layout/ui-kit.pug
+++ b/src/layout/ui-kit.pug
@@ -1,4 +1,5 @@
 include ../components/logo/logo
+block variables
 
 <!DOCTYPE html>
 html(lang="en")
@@ -6,7 +7,7 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
-    title Элементы формы
-  body.ui-kit
+    title #{title}
+  body(class=pageClass)
     +logo({ isBig: true })
     block content
