передаю в ui-kit из form-elements тайтл и класс для боди

--- a/src/page/form-elements.pug
+++ b/src/page/form-elements.pug
@@ -12,6 +12,9 @@ include ../components/pagination/pagination
 include ../components/features/features
 include ../components/bullet-list/bullet-list
 include ../components/comment/comment
+block variables
+  - var title = "Элементы форм"
+  - var pageClass = "form-elements"
 
 block content
   .container
