добавил заглушку карточки в Cards и описал стили

--- a/src/page/cards.pug
+++ b/src/page/cards.pug
@@ -12,3 +12,5 @@ block content
         +dateWishes()
       .cards-page__item
         +totalCard()
+      .cards-page__item
+        .card-page__stub-card
