добавил margin-bottom date-inputs

--- a/src/components/total-card/total-card.scss
+++ b/src/components/total-card/total-card.scss
@@ -48,6 +48,7 @@
 .total-card__date-inputs {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 20px;
 
   .input-group__label {
     margin-bottom: 6px;
