--- a/src/components/total-card/total-card.pug
+++ b/src/components/total-card/total-card.pug
@@ -34,6 +34,7 @@ mixin totalCard()
         id: "number-total-guests-input",
         isFakeInput: true,
         labelName: "Гости",
+        isBigLabel: true,
         isButtonSplit: true,
         isDownSplitAnimation: true,
         isHaveIcon: true,
